examples/v1alpha1/cross-namespace-routing/example-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: site-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: store-ns
