examples/v1alpha1/cross-namespace-routing/gateway.yaml
# Used in
# - site-src/v1alpha1/guides/multiple-ns.md

apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra-ns
spec:
  gatewayClassName: acme-lb
  listeners:  
  - hostname: "foo.example.com"
    protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      namespaces:
        from: "All"
