examples/v1alpha1/cross-namespace-routing/site-route.yaml
# Used in
# - site-src/v1alpha1/guides/multiple-ns.md

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: home
  namespace: site-ns
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: shared-gateway
      namespace: infra
  rules:
  - forwardTo:
    - serviceName: home
      port: 8080
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: login
  namespace: site-ns
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: shared-gateway
      namespace: infra
  rules:
  - matches:
    - path:
        value: /login
    forwardTo:
    - serviceName: login-v1
      port: 8080
      weight: 90
    - serviceName: login-v2
      port: 8080
      weight: 10
