examples/v1alpha1/cross-namespace-routing/store-route.yaml
# Used in
# - v1alpha1/guides/multiple-ns.md

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: store
  namespace: store-ns
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: shared-gateway
      namespace: infra
  rules:
  - matches:
    - path:
        value: /store
    forwardTo:
    - serviceName: store
      port: 8080
